# project_management_lab

./: .env  .flake8  .gitignore  Dockerfile  Dockerfile-Frontend  bohdan  docker-compose.yml  pyproject.toml  script.py  vlad_kyi
backend/: script.py
backend/src/config/: settings.py  urls.py
backend/src/core/: bot.py  middleware.py  models.py
backend/src/orders/: admin.py  models.py  serializers.py  urls.py  views.py
commands/: run_bot.sh  run_celery.sh  run_celery_beat.sh  run_fronted.sh  start_server.sh
frontend/: package-lock.json  package.json
frontend/src/: App.js  ArchiveOrders.js  CreateOrder.jsx  DeletedOrders.js  Login.js  Main.js  MyOrders.js  Register.css  Register.js  UserProfile.js  index.js
frontend/src/api/: create.jsx  endpoints.jsx  index.jsx  instance.jsx
frontend/src/components/: About.js  DeliveryInfoPage.jsx  DeliveryTerms.jsx  Footer.js  Header.js  ImageSlider.js  MainContent.js  Order.jsx  OurSuccess.jsx  WorkingHours.jsx  images.js  styles.css
frontend/src/store/: index.jsx
frontend/src/utils/: history.jsx  jwt.jsx
src/accounts/: exceptions.py  managers.py  models.py  serializers.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_alter_user_phone_number.py  0005_alter_user_phone_number.py  0006_alter_user_phone_number.py
src/config/: settings.py  urls.py
src/core/: admin.py  apps.py  bot.py  celery.py  middleware.py  models.py  storage.py  tasks.py
src/orders/: admin.py  models.py  serializers.py  urls.py  views.py
src/orders/migrations/: 0001_initial.py  0002_alter_orders_created_at.py  (+2 more)
(+11 files in other folders)
